Make the width of the Harmony Cast Dialog fixed

Fix the width to DISTANCE_BUBBLE_PREFERRED_WIDTH.

Bug: 848882
Change-Id: I6ef937efc0f5386b0b0616deccdfcef5aa22eacc
Reviewed-on: https://chromium-review.googlesource.com/1083117
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563796}
Former-commit-id: cf4fca0e485bf1bd1cec4077c3d4ea2cf2dc2d83